[package]
authors = ["Tim Bates <tim@rumpuslabs.com>"]
edition = "2021"
readme = "README.md"
name = "app"
version = "0.1.0"

[features]
no-semihosting = ["cortex-m-semihosting/no-semihosting"]

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
lpc176x5x-hal = { version = "0", path = "../lpc176x5x-hal" }
lpc176x5x-pac = { version = "0", path = "../lpc176x5x-pac" }
panic-reset = "0.1"
panic-semihosting = "0.6"
portable-atomic = { version = "1.5", default-features = false, features = ["require-cas"] }
switch-hal = "0.4"

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev.package."*"]
opt-level = 3
